[gd_scene load_steps=9 format=3 uid="uid://0j2vjocdbey1"]

[ext_resource type="PackedScene" uid="uid://7oeqdu22e1q5" path="res://Rooms/Room.tscn" id="1_y5yle"]
[ext_resource type="Script" path="res://Rooms/Biomes/tutorial_forest/tutorial_forest_end_room.gd" id="2_3fcsd"]
[ext_resource type="PackedScene" uid="uid://b38wk64vy80ng" path="res://Rooms/VerticalEntry.tscn" id="2_oa5hj"]
[ext_resource type="PackedScene" uid="uid://cu2w4d1vmvswo" path="res://Characters/npcs/grandpa/grandpa.tscn" id="3_nsehh"]
[ext_resource type="Texture2D" uid="uid://spi7xutqgvj5" path="res://Art/sleeping_bag.png" id="4_5c3u0"]
[ext_resource type="Script" path="res://interact_area.gd" id="5_elqp6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ko1ie"]
radius = 7.28011

[sub_resource type="CircleShape2D" id="CircleShape2D_h4k70"]

[node name="TutorialForestEndRoom" instance=ExtResource("1_y5yle")]
script = ExtResource("2_3fcsd")

[node name="TileMap" parent="." index="0"]
layer_0/tile_data = PackedInt32Array(393217, 524288, 2, 327681, 524288, 2, 327682, 131072, 1, 327683, 524288, 3, 393220, 131072, 0, 393221, 524288, 9, 458757, 1245184, 10, 458756, 524288, 8, 393219, 0, 3, 262147, 524288, 2, 196611, 196608, 2, 196610, 458752, 1, 262146, 131072, 1, 458755, 131072, 0, 327684, 131072, 3, 262148, 131072, 3, 196612, 131072, 3, 131077, 524288, 9, 524292, 1245184, 10, 524291, 524288, 8, 458754, 0, 3, 393218, 458752, 1, 524290, 131072, 3, 589826, 131072, 3, 589827, 524288, 9, 262145, 131072, 1, 327685, 524288, 9, 262149, 524288, 9, 196613, 524288, 9, 131076, 131072, 3, 196622, 131072, 2, 262158, 196608, 0, 327694, 458752, 3, 393230, 327680, 2, 458766, 458752, 3, 524302, 917504, 8, 131087, 196608, 2, 196623, 393216, 1, 262159, 262144, 2, 327695, 327680, 2, 393231, 458752, 3, 458767, 65536, 2, 524303, 196608, 3, 589839, 196608, 3, 655375, 0, 2, 196624, 393216, 3, 262160, 131072, 2, 327696, 327680, 3, 393232, 458752, 2, 458768, 0, 2, 524304, 524288, 3, 196621, 917504, 9, 262157, 917504, 9, 327693, 917504, 9, 393229, 917504, 9, 458765, 917504, 9, 524301, 1114112, 10, 131086, 196608, 2, 589838, 917504, 9, 655374, 917504, 9, 327697, 327680, 2, 393233, 327680, 2, 262161, 524288, 5, 131088, 393216, 5, 65550, 524288, 4, 65551, 458752, 4, 131085, 524288, 4, 131084, 393216, 5, 131083, 524288, 4, 131082, 393216, 5, 65545, 393216, 4, 65544, 393216, 4, 65543, 458752, 5, 65542, 393216, 5, 65541, 393216, 5, 65540, 458752, 5, 131075, 524288, 5, 131074, 393216, 5, 196609, 524288, 5, 131073, 327680, 7, 65539, 327680, 7, 65549, 327680, 7, 196625, 65536, 7, 65552, 65536, 7, 65546, 65536, 7, 65538, 131072, 7, 4, 131072, 7, 5, 131072, 7, 6, 131072, 7, 7, 131072, 7, 8, 131072, 7, 9, 131072, 7, 65547, 131072, 7, 65548, 131072, 7, 14, 131072, 7, 15, 131072, 7, 65553, 196608, 4, 16, 196608, 4, 10, 196608, 4, 131072, 262144, 4, 65537, 262144, 4, 3, 262144, 4, 13, 262144, 4)
layer_1/tile_data = PackedInt32Array(458769, 196608, 5, 589840, 196608, 5, 524305, 196608, 6, 655376, 196608, 6, 524304, 65536, 6, 655375, 131072, 6, 655374, 131072, 6, 655373, 131072, 6, 655372, 131072, 6, 655371, 131072, 6, 655370, 131072, 6, 655369, 131072, 6, 655368, 131072, 6, 655367, 262144, 6, 589831, 327680, 6, 589830, 131072, 6, 589829, 131072, 6, 589828, 131072, 6, 589827, 131072, 6, 589826, 131072, 6, 393216, 262144, 6, 327680, 262144, 5, 262144, 262144, 5, 196608, 262144, 5, 393217, 327680, 6, 458753, 262144, 5, 524289, 262144, 5, 589825, 262144, 6)
layer_2/tile_data = PackedInt32Array(196611, 589824, 3, 196610, 589824, 6, 262145, 393216, 8, 327681, 589824, 6, 393217, 655360, 6, 524290, 589824, 0, 131087, 589824, 6, 131086, 131072, 8, 196624, 0, 8, 655375, 131072, 8, 524304, 589824, 3, 655373, 196608, 11, 589836, 458752, 11, 393228, 196608, 11, 196620, 393216, 11, 262156, 196608, 11, 131078, 458752, 11, 458758, 458752, 11, 524294, 393216, 11, 589829, 262144, 11, 262150, 262144, 11, 524292, 131072, 11, 196613, 65536, 11, 393221, 131072, 11, 458757, 0, 11, 196621, 0, 11, 524301, 131072, 11, 655374, 0, 11, 393229, 131072, 11, 196622, 327680, 0, 131076, 262144, 0, 524302, 458752, 0, 393231, 524288, 0, 262159, 524288, 0, 262148, 524288, 0, 393218, 524288, 0, 458755, 458752, 0, 262146, 131072, 8)
layer_3/tile_data = PackedInt32Array(393233, 65536, 6)
layer_4/tile_data = PackedInt32Array(655373, 655360, 9, 589837, 655360, 9, 589836, 655360, 9, 655372, 655360, 9, 655371, 655360, 9, 655370, 655360, 9, 655369, 655360, 9, 655368, 655360, 9, 589832, 655360, 9, 589833, 655360, 9, 589834, 655360, 9, 589835, 655360, 9, 589828, 655360, 9, 589829, 655360, 9, 524293, 655360, 9, 524294, 655360, 9, 589830, 655360, 9, 589831, 655360, 9, 524295, 655360, 9, 458758, 655360, 9, 393222, 655360, 9, 327686, 655360, 9, 262150, 655360, 9, 196614, 655360, 9, 131078, 655360, 9, 131079, 655360, 9, 131080, 655360, 9, 131081, 655360, 9, 196617, 655360, 9, 196616, 655360, 9, 196615, 655360, 9, 262151, 655360, 9, 327687, 655360, 9, 393223, 655360, 9, 458759, 655360, 9, 524296, 655360, 9, 458760, 655360, 9, 393224, 655360, 9, 327688, 655360, 9, 262152, 655360, 9, 262153, 655360, 9, 327689, 655360, 9, 393225, 655360, 9, 458761, 655360, 9, 524297, 655360, 9, 524298, 655360, 9, 524299, 655360, 9, 524300, 655360, 9, 458764, 655360, 9, 393228, 655360, 9, 393227, 655360, 9, 458763, 655360, 9, 458762, 655360, 9, 393226, 655360, 9, 327690, 655360, 9, 327691, 655360, 9, 327692, 655360, 9, 262156, 655360, 9, 262155, 655360, 9, 196619, 655360, 9, 196618, 655360, 9, 262154, 655360, 9, 196620, 655360, 9)

[node name="VerticalEntry" parent="Entries/Right" index="0" instance=ExtResource("2_oa5hj")]
position = Vector2(280, 88)

[node name="TeleportPosition" parent="." index="8"]
position = Vector2(78, 70)

[node name="PlayerTeleportDetector" type="Area2D" parent="TeleportPosition" index="0"]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="TeleportPosition/PlayerTeleportDetector" index="0"]
shape = SubResource("CircleShape2D_ko1ie")

[node name="Grandpa" parent="." index="10" instance=ExtResource("3_nsehh")]
position = Vector2(196, 79)

[node name="SleepBag" type="Sprite2D" parent="." index="11"]
position = Vector2(59, 82)
texture = ExtResource("4_5c3u0")
offset = Vector2(0, 5)

[node name="InteractArea" type="Area2D" parent="SleepBag" index="0"]
script = ExtResource("5_elqp6")
path_to_sprite = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SleepBag/InteractArea" index="0"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_h4k70")
